# handaimanufacturer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml
docs/: ai-provider-design.md  architecture.md  camera-monitoring.md  moonraker-notes.md  orca-cli-notes.md  printer-safety.md  roadmap.md
handai_manufacturer/: __init__.py  __main__.py  app.py  config.py  jobs.py  logging_setup.py
handai_manufacturer/printers/: __init__.py  moonraker.py
handai_manufacturer/slicers/: __init__.py  orca.py
handai_manufacturer/static/: app.css
handai_manufacturer/templates/: index.html  job_detail.html
